2003-06-24 Simon Floery <simon.floery@gmx.at>

	* added french translation (fr.po). thanks to seb128
	* src/main.c: restricted key_snooper to main_window to get a working
	keypad in preferences dialog etc.
	* src/general_functions.c: gcc-2.95 fix
	(closes sf.net #759830)
	* src/main.c: check main_window_xml for NULL and abort with an error
	message.

########################################
# 2003-06-23 galculator 1.1.1 released #
########################################

2003-06-23 Simon Floery <simon.floery@gmx.at>

	* specify bit length/signed for hex, oct and bin mode 
	(closes DBTS #197490)
	* src/callbacks.c: fixed bug in interface preferences dialog <-> 
	font/color dialogs
	* src/general_functions.c: position_menu works with GTK 2.0 again

########################################
# 2003-06-22 galculator 1.1.0 released #
########################################

2003-06-18  Simon Floery <simon.floery@gmx.at>

	* changed Changelog format
	* src/display.c: removed mark_result_[start | end] in order to remove
	newline if there are no modules.
	* src/callbacks.c: X selection pasting works again

09-06-2003 constants popup, user defined constants
	memory popups
03-06-2003 improved keypad support
26-05-2003 i18n
12-05-2003 instant apply pref dialog (plus additional HIGs)
11-05-2003 moved to libglade
	paste numbers with mouse middle button click
	button activation and signals: bug fixes
30-04-2003 added KP_Delete and KP_Separator to key_snooper
	removed statusbar from GUI

24-04-2003 galculator 1.0 released
==================================

21-04-2003 fixed resizing problems with last_arith and bracket modules
20-04-2003 useless buttons are greyed out depending on current mode
	added Categories to galculator.desktop
	GUI updates (first small step towards HIG)
	use default/custom button font
19-04-2003 it's possible to save the display value on exit
13-04-2003 key press activates button like mouse click
06-04-2003 color button got a viewport